k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: team20-y-backend-svc
  annotations:
    alb.ingress.kubernetes.io/healthcheck-path: /api/actuator/health
    alb.ingress.kubernetes.io/success-codes: "200"
spec:
  type: ClusterIP
  selector:
    app: team20-y-backend
  ports:
    - port: 80
      targetPort: 8080
